ja-source/docusaurus-plugin-content-docs/version-4.x/sql-manual/sql-functions/scalar-functions/string-functions/substring.md
---
{
  "title": "SUBSTRING",
  "description": "SUBSTRING関数は、文字列から部分文字列を抽出するために使用されます。開始位置と長さを指定することができます。",
  "language": "ja"
}
---
## 説明

SUBSTRING関数は文字列から部分文字列を抽出するために使用されます。開始位置と長さを指定でき、前方向と後方向の両方の抽出をサポートしています。文字列内の最初の文字の位置は1です。

## 別名

SUBSTR

MID

## 構文

```sql
SUBSTRING(<str>, <pos> [, <len>])

SUBSTRING(<str> FROM <pos> [FOR <len>])
```
## パラメータ
| Parameter | デスクリプション                                      |
| --------- | ------------------------------------------------ |
| `<str>` | ソース文字列。型: VARCHAR                     |
| `<pos>` | 開始位置、負の値も可能。型: INT    |
| `<len>` | オプションパラメータ、抽出する長さ。型: INT |

## Return Value

VARCHAR型を返し、抽出された部分文字列を表します。

特殊なケース:
- いずれかのパラメータがNULLの場合、NULLを返します
- posが0の場合、空文字列を返します
- posが負の値の場合、文字列の末尾から逆方向にカウントします
- posが文字列の長さを超える場合、空文字列を返します
- lenが指定されない場合、posから文字列の末尾までのすべての文字を返します

## Examples

1. 基本的な使用方法（開始位置を指定）

```sql
SELECT substring('abc1', 2);
```
```text
+-----------------------------+
| substring('abc1', 2)        |
+-----------------------------+
| bc1                         |
+-----------------------------+
```
2. 負の位置の使用

```sql
SELECT substring('abc1', -2);
```
```text
+-----------------------------+
| substring('abc1', -2)       |
+-----------------------------+
| c1                          |
+-----------------------------+
```
3. positionが0の場合

```sql
SELECT substring('abc1', 0);
```
```text
+----------------------+
| substring('abc1', 0) |
+----------------------+
|                      |
+----------------------+
```
4. 位置が文字列長を超えています

```sql
SELECT substring('abc1', 5);
```
```text
+-----------------------------+
| substring('abc1', 5)        |
+-----------------------------+
|                             |
+-----------------------------+
```
5. length パラメータの指定

```sql
SELECT substring('abc1def', 2, 2);
```
```text
+-----------------------------+
| substring('abc1def', 2, 2)  |
+-----------------------------+
| bc                          |
+-----------------------------+
```
6. from と for の使用

```sql
SELECT substring('foobarbar' FROM 4 FOR 3);
```
```text
+-------------------------------------+
| substring('foobarbar' FROM 4 FOR 3) |
+-------------------------------------+
| bar                                 |
+-------------------------------------+
```
7. fromの使用

```sql
SELECT substring('foobarbar' FROM 4);
```
```text
+-------------------------------+
| substring('foobarbar' FROM 4) |
+-------------------------------+
| barbar                        |
+-------------------------------+
```
8. エイリアスMIDを使用したNULLの例

```sql
SELECT MID(NULL, 2);
```
```text
+--------------+
| MID(NULL, 2) |
+--------------+
| NULL         |
+--------------+
```
9. エイリアス SUBSTR の使用

```sql
SELECT SUBSTR('Hello World', 7, 5);
```
```text
+------------------------------+
| SUBSTR('Hello World', 7, 5)  |
+------------------------------+
| World                        |
+------------------------------+
```
10. UTF-8マルチバイト文字

```sql
SELECT SUBSTRING('ṭṛì ḍḍumai hello', 5, 6);
```
```text
+--------------------------------------+
| SUBSTRING('ṭṛì ḍḍumai hello', 5, 6)  |
+--------------------------------------+
| ḍḍumai                               |
+--------------------------------------+
```
### Keywords

    SUBSTRING, SUBSTR, MID
